[package]
name = "solana-pkcs8"
version = "0.1.0"
authors = ["Greg Fitzgerald <greg@solana.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
"src/ed25519_pkcs8_v2_template.der",
]

[dependencies]
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
untrusted = { version = "0.7.0" }
